--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "@thefirstspine/certificate-nest",
-  "version": "0.0.6",
+  "version": "1.0.0",
   "description": "Built on top of @thefirstspine/certificate-authority. Provides Nest services & guard.",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
-    "@nestjs/common": "^10.2.1",
-    "@thefirstspine/certificate-authority": "^0.0.1"
+    "@nestjs/common": "^10.2.6",
+    "@thefirstspine/certificate-authority": "^1.0.2"
   },
   "devDependencies": {
-    "@types/node": "^20.5.3",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.47.0",
-    "rimraf": "^5.0.1",
+    "@golevelup/ts-jest": "^0.4.0",
+    "@nestjs/core": "^10.2.6",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.50.0",
+    "jest": "^29.7.0",
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "build": "rimraf ./lib && tsc -b",
